syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.imulab.astrea.sdk.commons.flow.hybrid";
option java_outer_classname = "HybridFlowServiceProto";

package flow;

import "Failure.proto";

service HybridFlowService {
    rpc Authorize (HybridCodeRequest) returns (HybridCodeResponse);
    rpc Exchange (HybridTokenRequest) returns (HybridTokenResponse);
}

message HybridClient {
    string id = 1;
    repeated string responseTypes = 2;
    repeated string grantTypes = 3;
    repeated string redirectUris = 4;
    repeated string scopes = 5;
    string jwks = 6;
    string sectorIdentifierUri = 7;
    string subjectType = 8;
    string idTokenSignedResponseAlgorithm = 9;
    string idTokenEncryptedResponseAlgorithm = 10;
    string idTokenEncryptedResponseEncoding = 11;
}

message HybridCodeRequest {
    string id = 1;
    int64 requestTime = 2;
    repeated string responseTypes = 3;
    string redirectUri = 4;
    string state = 5;
    repeated string scopes = 6;
    HybridClient client = 7;
    Session session = 8;

    message Session {
        string subject = 1;
        repeated string grantedScopes = 2;
        int64 authenticationTime = 3;
        repeated string acrValues = 4;
        string nonce = 5;
        string obfuscatedSubject = 6;
    }
}

message HybridCodeResponse {
    bool success = 1;
    Data data = 2;
    op.Failure failure = 3;

    message Data {
        string code = 1;
        repeated string scopes = 2;
        string accessToken = 3;
        string tokenType = 4;
        int64 expiresIn = 5;
        string refreshToken = 6;
        string idToken = 7;
    }
}

message HybridTokenRequest {
    string id = 1;
    int64 requestTime = 2;
    string grantType = 3;
    string code = 4;
    string redirectUri = 5;
    HybridClient client = 6;
}

message HybridTokenResponse {
    bool success = 1;
    Data data = 2;
    op.Failure failure = 3;

    message Data {
        string accessToken = 1;
        string tokenType = 2;
        int64 expiresIn = 3;
        string refreshToken = 4;
        string idToken = 5;
    }
}